--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js-es6-icons</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/a19b158346.js" crossorigin="anonymous"></script>
 </head>
-<body class="bg-dark">
-    <script src="js/main.js"></script>
+<body>
+    <header>
+        <div class="p-2">
+            <h1 class="text-info"><em>FontIcons</em></h1>
+        </div>
+        <nav class="bg-info d-flex justify-content-center align-items-center py-3">
+            <h3 class="text-white px-3">Filtra per tipo</h3>
+            <select name="" id=""></select>
+        </nav>
+    </header>
+    <main class="bg-secondary">
+        <div id="max-container" class="container">
+            <div class="row">
+                <div class="col-5"></div>
+            </div>
+        </div>
+    </main>
+<script src="js/main.js"></script>
 </body>
 </html>
