--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
             <select name="" id=""></select>
         </nav>
     </header>
-    <main class="bg-secondary">
+    <main class="bg-secondary py-5">
         <div id="max-container" class="container">
-            <div class="row">
-                <div class="col-5"></div>
-            </div>
+            <div class="row fs-1"></div>
         </div>
     </main>
 <script src="js/main.js"></script>
